--- a/website/public/index.html
+++ b/website/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+	  <script src="https://kit.fontawesome.com/ec7b31a485.js" crossorigin="anonymous"></script>
     <title>React App</title>
     
   </head>
