Agregado header, footer, tipos de comidas

--- a/website/elementos jp/footer/footer.html
+++ b/website/elementos jp/footer/footer.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link rel="stylesheet" href="/website/elementos jp/footer/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <footer>
         <figure>
-            <a href="#"> <img src="/website/elementos jp/footer/logo-umami.png" alt=""></a>
+            <a href="#"> <img src="logo-umami.png" alt=""></a>
             <p>Página diseñada para que todos podamos ser chef alguna vez <br>
             en la vida y para dejar una sensación agradable a nuestros seres queridos</p>
         </figure>
