--- a/website/elementos jp/navegacion/index.html
+++ b/website/elementos jp/navegacion/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra Superior</title>
-    <link rel="stylesheet" href="/website/elementos jp/navegacion/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <div class="umami_image">
-            <a href="#"> <img src="/website/elementos jp/navegacion/logo-umami.png" alt=""></a>
+            <a href="#"> <img src="logo-umami.png" alt=""></a>
         </div> 
         <div class="nav_options">
              <ul>
@@ -20,13 +20,13 @@
                         <input class="main-input" type="text">
                         <a href=""></a>
                         <span class="search-icon">
-                            <img src="/website/elementos jp/navegacion/find.png" alt="">
+                            <img src="find.png" alt="">
                         </span>
 
                     </div>
                 </li>
                 <li><a href="#">Entrar / registro</a></li>
-                <li><a href="#">Carrito<img src="/website/elementos jp/navegacion/carrito-compras.png" alt=""></li></a>
+                <li><a href="#">Carrito<img src="carrito-compras.png" alt=""></li></a>
             </ul>
         </div>
     </nav>
