--- a/website/public/index.html
+++ b/website/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playball&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 	  <script src="https://kit.fontawesome.com/ec7b31a485.js" crossorigin="anonymous"></script>
     <title>React App</title>
     
